bad/method_arg_of_type_null.example_compiler_output
ERROR
[1mbad/method_arg_of_type_null.lat:3:11: [1;31merror: [0;1msyntax error at null[m
	void foo(null x) {}
	         [1;32m^[m
